tests/expectations/compiler/constructor/two_constructors_fail.out
Error [ETYC0372147]: A program can only have one constructor.
    --> compiler-test:10:5
     |
  10 |     async constructor() {
     |     ^^^^^
